--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/css/look.css">
+
+  <!-- CSS Links -->
+  <link rel="stylesheet" type="text/css" href="css/look.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <title>Colors | Game</title>
 </head>
@@ -27,7 +29,7 @@
       </div>
 
   <!-- JS Script -->
-  <script src="/js/app.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
 </html>
