adding rank levels

--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
       </div>
 
       <div id="levels-wrapper">
-        <div id="diff-title">difficulty: <span id="diff"></span></div>
-        <div id="levels-bar"></div>
+        <div id="diff-title">difficulty: <span id="diff"></span></div> <!-- Difficulty -->
+        <div id="levels-bar"></div> <!-- Bar -->
+
+        <ul id="ranks-wrapper"><!-- Ranks -->
+          <li>
+            <p class="rank-role">Mole</p></li><li>
+            <p class="rank-role">dog</p></li><li>
+            <p class="rank-role">tiger</p></li><li>
+            <p class="rank-role">hawk</p></li>
+        </ul>
         
       </div>
   <!-- JS Script -->
