Added one more rank role - owlgit add .

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 
         <ul id="ranks-wrapper"><!-- Ranks -->
           <li>
-            <p class="rank-role">Mole</p></li><li>
-            <p class="rank-role">dog</p></li><li>
+            <p class="rank-role">mole</p></li><li>
+            <p class="rank-role">cat</p></li><li>
             <p class="rank-role">tiger</p></li><li>
+            <p class="rank-role">owl</p></li><li>
             <p class="rank-role">hawk</p></li>
         </ul>
         
