added some animations

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
 
         <div id="time"></div>
 
-        <div id="score"></div>  
+        <div id="stats">
+          <div>
+            <div id="score"></div><span id="scorePlus">+1</span>
+          </div>
+          <div>
+            <div id="fault"></div><span id="faultPlus">+1</span>
+          </div>
+        </div>  
     
       </div>
 
