--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
   <title>Colors | Game</title>
 </head>
 <body>
+  
+    <div id="big-boss">
+
+      <div id="question">
+        <div id="q-line-height"><h1>Which</h1>
+        <h1 id="q-unique">color is</h1></div>
+        <h1>DIFFERENT?</h1>
+      </div>
 
       <div id="target-blocks">
         <ul id="target"></ul>
       </div>
 
       <div id="details">
-
         <div id="time"></div>
-
         <div id="stats">
           <div>
             <div id="score"></div><span id="scorePlus">+1</span>
@@ -27,8 +33,7 @@
           <div>
             <div id="fault"></div><span id="faultPlus">+1</span>
           </div>
-        </div>  
-    
+        </div>
       </div>
 
       <div id="levels-wrapper">
@@ -45,6 +50,9 @@
         </ul>
 
       </div>
+
+    </div>
+
   <!-- JS Script -->
   <script src="js/app.js"></script>
 
