--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-  <!-- CSS Links -->
+  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
   <link rel="stylesheet" type="text/css" href="css/look.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-  <title>Colors | Game</title>
+  <title>Blocks | Eye test by Radek Vlcek</title>
 </head>
 <body>
   
     <div id="big-boss">
+      <div id="intro">
+        <a href="/index.html"><img src="/blocks_image.png" alt=""><h2>Blocks</h2><p>eye test by little wolf</p></a>
+      </div>
 
       <div id="question">
         <div id="q-line-height"><h1>Which</h1>
