--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
     <div id="big-boss">
       <div id="intro">
-        <a href="/index.html"><img src="/blocks_image.png" alt=""><h2>Blocks</h2><p>eye test by little wolf</p></a>
+        <a href="/index.html"><img src="/blocks_image.png" alt=""><h2>Blocks</h2><p>eye test by radek vlcek</p></a>
       </div>
 
       <div id="question">
