adding gaming history + quotes...

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 
       <div id="target-blocks">
         <ul id="target"></ul>
+
+        <div id="history">
+          <h1 id="score-history">This is history.</h1>
+          <p id="quotes">Quotes here...</p>
+        </div>
+
       </div>
 
       <div id="details">
