added history and stuff..

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul id="target"></ul>
 
         <div id="history">
-          <h1 id="score-history">This is history.</h1>
+          <table id="score-history"></table>
           <p id="quotes">Quotes here...</p>
         </div>
 
