--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       <div id="target-blocks">
         <ul id="target"></ul>
 
+        <button id="start-button">START</button>
+        
         <div id="history">
           <table id="score-history"></table>
           <p id="quotes">Quotes here...</p>
@@ -63,6 +65,5 @@
 
   <!-- JS Script -->
   <script src="js/app.js"></script>
-
 </body>
 </html>
