added 'clear history' option, fixed some bugs

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <ul id="target"></ul>
 
         <button id="start-button">START</button>
+        <button id="clear-history">clear history</button>
         
         <div id="history">
           <table id="score-history"></table>
           <p id="quotes">Quotes here...</p>
         </div>
-
       </div>
 
       <div id="details">
@@ -47,10 +47,9 @@
       </div>
 
       <div id="levels-wrapper">
-        <div id="diff-title">difficulty: <span id="diff"></span></div> <!-- Difficulty -->
-        <div id="levels-bar"></div> <!-- Bar -->
-
-        <ul id="ranks-wrapper"><!-- Ranks -->
+        <div id="diff-title">difficulty: <span id="diff"></span></div>
+        <div id="levels-bar"></div>
+        <ul id="ranks-wrapper">
           <li>
             <p class="rank-role">mole</p></li><li>
             <p class="rank-role">cat</p></li><li>
@@ -58,9 +57,7 @@
             <p class="rank-role">owl</p></li><li>
             <p class="rank-role">hawk</p></li>
         </ul>
-
       </div>
-
     </div>
 
   <!-- JS Script -->
