going to sleep now

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul id="target"></ul>
 
         <button id="start-button">START</button>
-        <button id="clear-history">clear history</button>
+        <p id="clear-history"><a href="#">clear history</a></p>
         
         <div id="history">
           <table id="score-history"></table>
@@ -57,9 +57,13 @@
             <p class="rank-role">owl</p></li><li>
             <p class="rank-role">hawk</p></li>
         </ul>
-      </div>
+      </div>  
     </div>
 
+    <div id="footer">
+      <p>No external database is being used on this website, gaming history is being stored in a browser's local storage. Created by <a href="http://www.radek.tech/">Radoslav Vlcek</a>.</p>
+      <a id="github-link" href=""><img src="/img/mark-github.png" alt="Github Link" width="90"></a>
+    </div>
   <!-- JS Script -->
   <script src="js/app.js"></script>
 </body>
