--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
   <link rel="stylesheet" type="text/css" href="css/look.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <title>Blocks | Eye test by Radek Vlcek</title>
@@ -13,7 +13,7 @@
   
     <div id="big-boss">
       <div id="intro">
-        <a href="/index.html"><img src="/blocks_image.png" alt=""><h2>Blocks</h2><p>eye test by radek vlcek</p></a>
+        <a href="/index.html"><img src="/img/blocks_image.png" alt=""><h2>Blocks</h2><p>eye test by radek vlcek</p></a>
       </div>
 
       <div id="question">
@@ -28,9 +28,10 @@
         <button id="start-button">START</button>
         <p id="clear-history"><a href="#">clear history</a></p>
         
+        <h3 id="no-history">No history available.</h3>
         <div id="history">
           <table id="score-history"></table>
-          <p id="quotes">Quotes here...</p>
+          <p id="quotes"></p>
         </div>
       </div>
 
@@ -61,8 +62,8 @@
     </div>
 
     <div id="footer">
-      <p>No external database is being used on this website, gaming history is being stored in a browser's local storage. Created by <a href="http://www.radek.tech/">Radoslav Vlcek</a>.</p>
-      <a id="github-link" href=""><img src="/img/mark-github.png" alt="Github Link" width="90"></a>
+      <p>No external database is being used on this website, gaming history is being stored in a browser's local storage. Created by <a href="http://www.radek.tech/" target="_blank">Radoslav Vlcek</a>.</p>
+      <a id="github-link" href="https://github.com/RadekVlcek/blocks" target="_blank"><img src="/img/mark-github.png" alt="Github Link" width="90"></a>
     </div>
   <!-- JS Script -->
   <script src="js/app.js"></script>
