--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
   
+    <div id="ok">
+      <h4>This game does not support a screen resolution of your device.</h4>
+      <h1>Please play this game on your laptop / desktop PC.</h1>
+    </div>
+
     <div id="big-boss">
       <div id="intro">
         <a href="/index.html"><img src="/img/blocks_image.png" alt=""><h2>Blocks</h2><p>eye test by radek vlcek</p></a>
@@ -28,7 +33,7 @@
         <button id="start-button">START</button>
         <p id="clear-history"><a href="#">clear history</a></p>
         
-        <h3 id="no-history">No history available.</h3>
+        <h3 id="no-history">No history available</h3>
         <div id="history">
           <table id="score-history"></table>
           <p id="quotes"></p>
@@ -62,7 +67,7 @@
     </div>
 
     <div id="footer">
-      <p>No external database is being used on this website, gaming history is being stored in a browser's local storage. Created by <a href="http://www.radek.tech/" target="_blank">Radoslav Vlcek</a>.</p>
+      <p>No external database is being used on this website, gaming history is being stored in a web browser's local storage. Created by <a href="http://www.radek.tech/" target="_blank">Radoslav Vlcek</a>.</p>
       <a id="github-link" href="https://github.com/RadekVlcek/blocks" target="_blank"><img src="/img/mark-github.png" alt="Github Link" width="90"></a>
     </div>
   <!-- JS Script -->
