--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul id="target"></ul>
 
         <button id="start-button">START</button>
-        <p id="clear-history"><a href="#">clear history</a></p>
+        <p><a id="clear-history" href="#">clear history</a></p>
         
         <h3 id="no-history">No history available</h3>
         <div id="history">
