added more animations and web browser detection + bug fixes

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       <h1>Please play this game on your laptop / desktop PC.</h1>
     </div>
 
+    <div id="ie">
+      <h4>Playing games using Internet Explorer?</h4>
+      <h1>Ain't gonna work, better try with <a href="https://www.google.com/chrome/">Chrome</a> or <a href="https://www.mozilla.org">Firefox</a>.</h1>
+    </div>
+
     <div id="big-boss">
       <div id="intro">
         <a href="/index.html"><img src="/img/blocks_image.png" alt=""><h2>Blocks</h2><p>eye test by radek vlcek</p></a>
