--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
     <div id="footer">
       <p>No external database is being used on this website, gaming history is being stored in a web browser's local storage. Created by <a href="http://www.radek.tech/" target="_blank">Radoslav Vlcek</a>.</p>
-      <a id="github-link" href="https://github.com/RadekVlcek/blocks" target="_blank"><img src="/img/mark-github.png" alt="Github Link" width="90"></a>
+      <a id="github-link" href="https://github.com/RadekVlcek/blocks" target="_blank"><img src="/img/mark-github.png" alt="Github Link" width="20"></a>
     </div>
   <!-- JS Script -->
-  <script src="js/app.js"></script>
+  <script src="js/game.js"></script>
 </body>
 </html>
